--- a/index.ipynb
+++ b/index.ipynb
@@ -140,23 +140,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function str.title>"
+       "'Art Vandelay'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "\"art vandelay\".title"
+    "\"art vandelay\".title()"
    ]
   },
   {
