--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,7 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "\"art.vandelay@v\""
+    "\"art.vandelay@vandelay.co\""
    ]
   },
   {
