--- a/index.ipynb
+++ b/index.ipynb
@@ -211,8 +211,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False\n",
-    "bool(\"art.vandelay@vandelay.co\")"
+    "\"art.vandelay@vandelay.co\".endswith # False\n"
    ]
   },
   {
