--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endswith # False\n"
+    "\"art.vandelay@vandelay.co\".endswith () # False\n"
    ]
   },
   {
