--- a/index.ipynb
+++ b/index.ipynb
@@ -196,22 +196,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endswith () # False\n"
+    "\"art.vandelay@vandelay.co\".endswith (\".com\") # False\n"
    ]
   },
   {
